--- a/tex/TeX_files/chapter01.tex
+++ b/tex/TeX_files/chapter01.tex
@@ -361,7 +361,7 @@ If the key length is 1, and \( q_i \) is the probability of occurrent of $i$-th 
 
 If you want to double try to find key length using \textit{index of coincidence method} as described in text book and implemented at:
 
-\textbf{vigenereattack.cpp:\_findKeyLength} on \textbf{chap\_01} solutions at \href{https://github.com/Zer0Leak/KatzCryptoBookSolutions}{Zer0Leak's solutions of KatzCryptoBookSolutions on GitHub}.
+\textbf{vigenereattack.cpp:\_findKeyLength} on \textbf{chap\_01} solutions at \href{https://github.com/Zer0Leak/KatzCryptoBookSolutions/blob/main/chap01/qt_project/vigenereattack.cpp}{Zer0Leak's solutions of KatzCryptoBookSolutions on GitHub}.
 
 \vspace{1em}
 \noindent
@@ -369,7 +369,7 @@ If you want to double try to find key length using \textit{index of coincidence 
 the Vigenère cipher.
 \vspace{1em}
 
-See \textbf{chap\_01} solutions at \href{https://github.com/Zer0Leak/KatzCryptoBookSolutions}{Zer0Leak's solutions of KatzCryptoBookSolutions on GitHub}.
+See \textbf{chap\_01} solutions at \href{https://github.com/Zer0Leak/KatzCryptoBookSolutions/blob/main/chap01/qt_project/}{Zer0Leak's solutions of KatzCryptoBookSolutions on GitHub}.
 
 \vspace{1em}
 \noindent
